--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.javahome</groupId>
-	<artifactId>myweb</artifactId>
-	<packaging>war</packaging>
-	<version>0.0.7</version>
+	<artifactId>rakesh</artifactId>
+	<packaging>jar</packaging>
+	<version>0.0.8</version>
 	<name>my-app</name>
 	
 	<!-- Demo on Github Webhooks-->
